--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,4 +2,6 @@ services:
   sut:
     user: app:app
     build: .
+    volumes:
+      - ./run_tests.sh:/var/www/app/run_tests.sh
     command: run_tests.sh
