get into the correct folder

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,4 +4,4 @@ services:
     build: .
     volumes:
       - ./run_tests.sh:/var/www/app/run_tests.sh
-    command: run_tests.sh
+    command: cd /var/www/app && run_tests.sh
