allow bugfixes from base image

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -14,7 +14,7 @@ server {
 
     client_max_body_size 100M;
 
-    location ~ ^/(Dockerile|docker-compose.yml)/ {
+    location ~ ^/(Dockerfile|docker-compose.yml)/ {
         deny all;
         access_log off;
         log_not_found off;
