--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -19,6 +19,7 @@ stdout_logfile_maxbytes=0
 [program:php-fpm]
 process_name=%(program_name)s_%(process_num)02d
 command=/usr/local/sbin/php-fpm --nodaemonize
+priority=1
 autostart=true
 autorestart=true
 startretries=5
